# parallel-relaxed-flooding-algorithm

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  parameters.h
bfa/: bfa.h  bfaHost.cu
images/: nuclei_EDF007.txt
pfa/: kdtree.h  kdtreeMake.h  kdtreeSearch.h  pfa.h  pfaHost.cu  prfa2DKernel.h
utils/: numberGenerator.hpp  pfaUtils.h
